--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jobs-calc",
   "version": "1.0.0",
   "description": "Freelancer Calculator",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "dev": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
